ui: spacing fixes + favicon

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -70,6 +70,7 @@
 
 #hero .image-wrapper {
   text-align: right;
+  overflow-x: hidden;
 }
 
 #contact .heading {
